nginx_ingress.yaml
#apiVersion: networking.k8s.io/v1
#
#kind: Ingress
#
#metadata:
#
#  name: nginx-ingress
#
#  annotations:
#    kubernetes.io/ingress.global-static-ip-name: "static-ip"
#
#    nginx.ingress.kubernetes.io/rewrite-target: /
#
#spec:
#
#  rules:
#
#    - http:
#
#        paths:
#
#          - path: /*
#
#            pathType: Prefix
#
#            backend:
#
#              service:
#
#                name: nginx-service
#
#                port:
#
#                  number: 80
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "static-ip-asia"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
